# minerva

./: .env.example  .gitignore  CONTEXT.md  README.md  TODO.md  analysis.ipynb  mincli.py  pyproject.toml
abstract/: abstract.tex
data/: final_frca.json  primary_frca.json
design/: future.md  minerva-cli-website-support.md  question-bank-design.md
docs/design/: question-bank-design.md  website-export-v1.md
docs/sources/: source-manifest.json
examples/: final.md  final_frca_sample_sbas_2026-05-02.json  primary_frca_sample_sbas_2026-05-02.json  rcoa.md
examples/histories/: a_rotameter_bobbin_rises_in_a_tapered_tube_until_t.json  adrenaline_hyperglycaemia_mechanism.json  adrenaline_increases_plasma_glucose_by_promoting_h.json  alfentanil_is_useful_in_short_day_case_anaesthesia.json  alfentanil_low_volume_of_distribution_and_rapid_offset.json  anaesthetic_depth_is_related_more_closely_to_parti.json  aneurysmal_subarachnoid_haemorrhage_cerebral_perfusion_optim.json  arterial_line_monitoring_optimal_damping.json  (+42 more)
minerva/: agent.py  conversion.py  critique.py  curriculum.py  curriculum_match.py  embed.py  generation.py  history.py  inputs.py  llm.py  models.py  output.py  paths.py  prompts.py  quiz.py  render.py  similarity.py  source_manifest.py  validation.py  website_export.py  workflows.py
scripts/: make_history.py  retitle_histories.py
tests/: conftest.py  test_agent.py  test_cli.py  test_curriculum.py  test_embed.py  test_inputs.py  test_models.py  test_output.py  test_paths.py  test_prompts.py  test_source_manifest.py  test_validation.py  test_website_export.py  test_workflows.py
(+12 files in other folders)
