[project]
name = "minerva"
version = "0.2.0"
description = "LLM-based Single Best Answer Question Generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai>=0.0.14",
    "lancedb>=0.20.0",
    "sentence-transformers>=3.0",
    "pdfplumber>=0.11.0",
    "typer>=0.14.0",
    "python-dotenv>=1.0.1",
    "rich>=13.0",
    "pydantic>=2.10.2",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ipython>=8.30.0",
]
